--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="style.css" />
+    <link rel="shortcut icon" type="png" href="./images/images.png" />
     <title>Login</title>
   </head>
   <body>
@@ -17,7 +18,7 @@
         <p>Bem Vindo</p>
         <input type="email" placeholder="Usuário" /><br />
         <input type="password" placeholder="Senha" /><br />
-        <input type="button" value="Sign in" /><br />
+        <input type="button" value="Entrar" /><br />
         <a href="#">Esqueceu sua senha?</a>
       </form>
 
