--- a/index.html
+++ b/index.html
@@ -3,32 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="style.css" />
-    <link rel="shortcut icon" type="png" href="./images/images.png" />
-    <title>Login</title>
+    <link rel="stylesheet" href="./css/style.css" />
+    <script src="./js/script.js" defer></script>
+    <title>Mario Jump</title>
   </head>
   <body>
-    <div class="container">
-      <form>
-        <p>Bem Vindo</p>
-        <input type="email" placeholder="Usuário" /><br />
-        <input type="password" placeholder="Senha" /><br />
-        <input type="button" value="Entrar" /><br />
-        <a href="#">Esqueceu sua senha?</a>
-      </form>
-
-      <div class="drops">
-        <div class="drop drop-1"></div>
-        <div class="drop drop-2"></div>
-        <div class="drop drop-3"></div>
-        <div class="drop drop-4"></div>
-        <div class="drop drop-5"></div>
-      </div>
+    <div class="game-board">
+      <img src="./images/mario.gif" class="mario" />
+      <img src="./images/pipe.png" class="pipe" />
+      <img src="./images/clouds.png" class="clouds" />
     </div>
   </body>
 </html>
