Novo site Barce

--- a/contact.html
+++ b/contact.html
@@ -11,33 +11,26 @@
       <h1>
         <img src="./images/logoBarce.jpeg" alt="" />
       </h1>
-      <nav>
-        <a href="#" class="active">Inicio</a>
-        <a href="#">Jogadores</a>
-        <a href="jogos.html">Services</a>
-        <a href="contact.html">Contato</a>
-        <!-- <a href="#">Login</a> -->
-      </nav>
     </header>
     <section class="Home">
       <div class="text-box">
-        <h1>Barcelesão</h1>
-        <h1>Time society</h1>
+        <h1>Simuland</h1>
+        <h1>Dive, Discover, Dream</h1>
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro,
           pariatur assumenda id aperiam ea dolore? Doloremque tenetur nostrum
           asperiores quae!
         </p>
         <span class="btn-box">
-          <!-- <button type="button" class="btn">Start Now</button> -->
-          <button type="button" class="btn">Contato para jogo</button>
+          <button type="button" class="btn">Start Now</button>
+          <button type="button" class="btn">Contact Us</button>
         </span>
       </div>
       <span class="background-span">
         <span class="overlay"></span>
-        <!-- <img src="./images/fundo2.jpg" alt="" /> -->
+        <img src="./images/background.png" alt="" />
       </span>
-      <img src="./images/time.jpg" class="img" alt="" />
+      <img src="./images/img.png" class="img" alt="" />
     </section>
   </body>
 </html>
