--- a/jogos.html
+++ b/jogos.html
@@ -1,7 +1,21 @@
-<iframe
-  src="https://onedrive.live.com/embed?resid=8BBE165B5B5E045F%21185834&authkey=!AOi5SyP6iG_wdIs&em=2"
-  width="1900"
-  height="1060"
-  frameborder="0"
-  scrolling="no"
-></iframe>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="shortcut icon" type="image/jpg" href="images/logobarcee.png" />
+    <title>Jogos</title>
+  </head>
+  <body>
+    <div class="container">
+      <iframe
+        src="https://onedrive.live.com/embed?resid=8BBE165B5B5E045F%21185834&authkey=!AOi5SyP6iG_wdIs&em=2"
+        width="1900"
+        height="1060"
+        frameborder="0"
+        scrolling="no"
+      ></iframe>
+    </div>
+  </body>
+</html>
