--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <link rel="shortcut icon" type="image/jpg" href="images/logobarcee.png" />
+    <title>Barcelesão</title>
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
@@ -13,9 +14,9 @@
       </h1>
       <nav>
         <a href="#" class="active">Inicio</a>
-        <a href="#">Jogadores</a>
-        <a href="jogos.html">Services</a>
-        <a href="contact.html">Contato</a>
+        <a href="jogadores.html">Jogadores</a>
+        <a href="jogos.html">Jogos</a>
+        <!-- <a href="contact.html">Contato</a> -->
         <!-- <a href="#">Login</a> -->
       </nav>
     </header>
@@ -23,14 +24,13 @@
       <div class="text-box">
         <h1>Barcelesão</h1>
         <h1>Time society</h1>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro,
-          pariatur assumenda id aperiam ea dolore? Doloremque tenetur nostrum
-          asperiores quae!
-        </p>
+        <p>Time localizado no Caravaggio</p>
         <span class="btn-box">
           <!-- <button type="button" class="btn">Start Now</button> -->
-          <button type="button" class="btn">Contato para jogo</button>
+          <!-- <button type="button" class="btn">Contato para jogo</button> -->
+          <a href="https://www.instagram.com/barcelesao/" class="btn">
+            Contato para jogos
+          </a>
         </span>
       </div>
       <span class="background-span">
