--- a/jogos.html
+++ b/jogos.html
@@ -10,11 +10,11 @@
   <body>
     <div class="container">
       <iframe
-        src="https://onedrive.live.com/embed?resid=8BBE165B5B5E045F%21185834&authkey=!AOi5SyP6iG_wdIs&em=2"
         width="1900"
         height="1060"
         frameborder="0"
         scrolling="no"
+        src="https://onedrive.live.com/embed?resid=8BBE165B5B5E045F%21185834&authkey=%21AOi5SyP6iG_wdIs&em=2&wdAllowInteractivity=False&AllowTyping=True&wdHideGridlines=True&wdHideHeaders=True&wdDownloadButton=True&wdInConfigurator=True&wdInConfigurator=True"
       ></iframe>
     </div>
   </body>
