--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Lojinha</title>
+    <link rel="icon" href="images/logoooo.jpg" type="image/png">
+    <title>Blue Store</title>
     <link rel="stylesheet" href="style/global.css" />
   </head>
   <body>
