Teste site de vendas

--- a/index.html
+++ b/index.html
@@ -2,248 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="images/logoo.png" type="image/png">
-    <title>Blue Store</title>
-    <link rel="stylesheet" href="style/global.css" />
+    <title>fernandev - Desafio React 06</title>
   </head>
   <body>
-    <div class="navbar">
-      <div class="header-inner-content">
-        <h1 class="logo">BLUE<span>STORE</span></h1>
-        <nav>
-          <ul>
-            <li>Home</li>
-            <li>Produtos</li>
-            <li>Sobre</li>
-            <li>Contato</li>
-            <li>Conta</li>
-          </ul>
-        </nav>
-        <div class="nav-icon-container">
-          <img src="/images/cart.png" />
-          <img src="/images/menu.png" class="menu-button"/>
-        </div>
-      </div>
-    </div>
-    <header>
-      <div class="header-inner-content">
-        <div class="header-bottom-side">
-          <div class="header-bottom-side-left">
-            <h2>De um novo estilo ao seu trabalho!</h2>
-            <p>
-              Sucesso nem sempre tem haver com grandreza. Tem haver com a
-              consistencia. Trabalho duro consistente supera o sucesso, a
-              grandeza virá.
-            </p>
-            <button>Ver Agora &#8594</button>
-          </div>
-          <div class="header-bottom-sider-right">
-            <img src="images/gaming-msi-header.png">
-          </div>
-        </div>
-      </div>
-    </header>
-
-    <!-- Main Content -->
-     <main>
-      <div class="gray-background">
-        <div class="page-inner-content">
-          <div class="cols cols-3">
-            <img src="images/products/product-1.png">
-            <img src="images/products/product-2.png">
-            <img src="images/products/product-3.png">
-          </div>
-        </div>
-      </div>
-
-      <div>
-        <div class="page-inner-content">
-          <h3 class="section-title">Produtos Selecionados</h3>
-          <div class="subtitle-underline"></div>
-          <div class="cols cols-4">
-            <div class="product">
-              <img src="images/products/product-4.png">
-                <p class="product-name">Kit Gamer Periféricos Completo Teclado Mouse e Headset Gamer - EVOLUT</p>
-                <p class="rate">&#9733&#9733&#9733&#9733&#9734</p>
-                <p class="product-price"><span>R$</span> 195,06 </p>
-            </div>
-
-            <div class="product">
-              <img src="images/products/product-5.png">
-                <p class="product-name">Placa de Vídeo GTX 1650 D6 Ventus XS OCV3 MSI NVIDIA GeForce, 4GB GDDR6, G- Sync - 912-V812-003</p>
-                <p class="rate">&#9733&#9733&#9733&#9733&#9734</p>
-                <p class="product-price"><span>R$</span> 952,93 </p>
-            </div>
-
-            <div class="product">
-              <img src="images/products/product-6.png">
-                <p class="product-name">Controle Sony DualSense PS5, Sem Fio, Branco - 3005767</p>
-                <p class="rate">&#9733&#9733&#9733&#9733&#9734</p>
-                <p class="product-price"><span>R$</span> 449,90</p>
-            </div>
-
-            <div class="product">
-              <img src="images/products/product-7.png">
-                <p class="product-name">Cadeira Gamer Otello Preto e Vermelho</p>
-                <p class="rate">&#9733&#9733&#9733&#9733&#9734</p>
-                <p class="product-price"><span>R$</span> 722,75 </p>
-            </div>
-          </div>
-        </div>
-
-        <div class="page-inner-content">
-          <h3 class="section-title">Ultimos Produtos</h3>
-          <div class="subtitle-underline"></div>
-          <div class="cols cols-4">
-            <div class="product">
-              <img src="images/products/product-8.png">
-                <p class="product-name">Apple iPhone 14 Pro 512GB Roxo-profundo</p>
-                <p class="rate">&#9733&#9733&#9733&#9733&#9734</p>
-                <p class="product-price"><span>R$</span> 8.328,06 </p>
-            </div>
-
-            <div class="product">
-              <img src="images/products/product-9.png">
-                <p class="product-name">Samsung Galaxy S23 Ultra</p>
-                <p class="rate">&#9733&#9733&#9733&#9733&#9733</p>
-                <p class="product-price"><span>R$</span> 4.499,00 </p>
-            </div>
-
-            <div class="product">
-              <img src="images/products/product-10.png">
-                <p class="product-name">Smartphone Asus Rog Phone 5s Pro 18gb/ 512gb Preto</p>
-                <p class="rate">&#9733&#9733&#9733&#9733&#9733</p>
-                <p class="product-price"><span>R$</span> 9.999,00 </p>
-            </div>
-
-            <div class="product">
-              <img src="images/products/product-11.png">
-                <p class="product-name">Xiaomi 12S Ultra</p>
-                <p class="rate">&#9733&#9733&#9733&#9733&#9734</p>
-                <p class="product-price"><span>R$</span> 5.227,00 </p>
-            </div>
-            <div class="product">
-              <img src="images/products/product-12.png">
-                <p class="product-name">Console Microsoft Xbox Series X 1tb Novo Xbox Series</p>
-                <p class="rate">&#9733&#9733&#9733&#9733&#9734</p>
-                <p class="product-price"><span>R$</span> 4.199,00 </p>
-            </div>
-
-            <div class="product">
-              <img src="images/products/product-13.png">
-                <p class="product-name">Thrustmaster T80 Ferrari 488 GTB Edition Racing Wheel PS4</p>
-                <p class="rate">&#9733&#9733&#9733&#9734&#9734</p>
-                <p class="product-price"><span>R$</span> 1.718,00 </p>
-            </div>
-
-            <div class="product">
-              <img src="images/products/product-14.png">
-                <p class="product-name">Console Playstation 5 Ps5 Standard 2 Controles Dualsense - Sony</p>
-                <p class="rate">&#9733&#9733&#9733&#9733&#9734</p>
-                <p class="product-price"><span>R$</span> 5.599,00 </p>
-            </div>
-
-            <div class="product">
-              <img src="images/products/product-15.png">
-                <p class="product-name">GIGABYTE AORUS Project Stealth DIY PC Kit (Z690 AORUS Elite Stealth, NVIDIA GeForce RTX 3070 Gaming OC 8G Stealth, AORUS C300G Stealth) - GB-Stealth Combo IN2181</p>
-                <p class="rate">&#9733&#9733&#9733&#9733&#9734</p>
-                <p class="product-price"><span>R$</span> 4.126,00 </p>
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <div class="gray-background">
-        <div class="header-inner-content">
-          <div class="header-bottom-side exclusive-container">
-            <div class="header-bottom-side-left">
-              <h2>Smart Band 4</h2>
-              <p>
-                O Mi Smart Band 4 tem uma tela AMOLED 39.9% maior que o Mi Smart Band 3, tela completamente digital com brilho ajustável, de tal modo que tudo é claro ao máximo.
-              </p>
-              <button>Ver Agora &#8594</button>
-            </div>
-            <div class="header-bottom-sider-right">
-              <img src="images/exclusive.png">
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <div>
-        <div class="page-inner-content">
-          <div class="testimonials">
-            <div class="testimonial">
-              <p>"</p>
-              <p>
-                O melhor website ecommerce moderno e responsivo, vou compartilhar o video com maior número de pessoas que eu conseguir para ajudar o canal a crescer.                
-              </p>
-              <p class="rate">&#9733&#9733&#9733&#9733&#9734</p>
-              <p>Anonimo 1</p>
-            </div>
-
-            <div class="testimonial">
-              <p>"</p>
-              <p>O melhor website ecommerce moderno e responsivo, vou compartilhar o video com maior número de pessoas que eu conseguir para ajudar o canal a crescer.                
-              </p>
-              <p class="rate">&#9733&#9733&#9733&#9733&#9734</p>
-              <p>Anonimo 2</p>
-            </div>
-
-            <div class="testimonial">
-              <p>"</p>
-              <p>O melhor website ecommerce moderno e responsivo, vou compartilhar o video com maior número de pessoas que eu conseguir para ajudar o canal a crescer.                
-              </p>
-              <p class="rate">&#9733&#9733&#9733&#9733&#9734</p>
-              <p>Anonimo 3</p>
-            </div>
-          </div>
-        </div>
-      </div>
-     </main>
-
-     <footer class="gray-background">
-      <div class="page-inner-content footer-content">
-        <div class="download-options">
-          <p>Baixe nosso aplicativo!</p>
-          <p>Baixe nosso aplicativo parar Android e iOS</p>
-          <div>
-            <img src="images/app-store.png">
-            <img src="images/play-store.png">
-          </div>
-        </div>
-
-        <div class="logo-footer">
-          <h1 class="logo">BLUE<span>STORE</span></h1>
-          <p>Nosso objetivo é ajduar as pessoas comuns a se tornarem desenvolvedores web pro max</p>
-        </div>
-
-        <div class="links-footer">
-          <h3>Links úteis</h3>
-          <ul>
-            <li>Cupons</li>
-            <li>Blog Post</li>
-            <li>Políticas</li>
-            <li>Torne-se membro</li>
-          </ul>
-        </div>
-      </div>
-
-      <hr class="page-inner-content" />
-
-      <div class="page-inner-content copyright">
-        <p>Copyright 2024 - Anonimo - Todos Direitos Reservados</p>
-      </div>
-     </footer>
-
-    <script>
-      const navbar = document.querySelector(".navbar");
-      const menuButton = document.querySelector(".menu-button");
-
-      menuButton.addEventListener("click", () => {
-        navbar.classList.toggle("show-menu");
-      })
-    </script>
+    <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
